--- a/GasolineraPUMA/Frm_Ventas.resx
+++ b/GasolineraPUMA/Frm_Ventas.resx
@@ -308,7 +308,7 @@
         O/67xy13I2MhxkWMjxgnMV7ep2L87K1iPK2tAPTSU57y/wFvm0tAZGvyWwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnLimpiar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAN
         1gAADdYBkG95nAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAEPBSURBVHhe7d0H
